<resources>
  <string name="app_name">Donation</string>
  <string name="action_settings">Settings</string>
  <string name="donateTitle">Welcome Homer</string>
  <string name="donateSubtitle">Please give generously</string>
  <string name="donateButton">Donate</string>
  <string name="PayPal">PayPal</string>
  <string name="Direct">Direct</string>

  <string name="amount">Amount:</string>
  <string name="initialAmount">0</string>
  <string name="amountSoFarLabel">Total so far:</string>

  <string name="menuReport">Report</string>
  <string name="reportTitle">Report</string>

  <string name="defaultAmount">00</string>
  <string name="defaultMethod">N/A</string>

  <string name="menuDonate">Donate</string>

  <string name="welcomeLogin">Login</string>
  <string name="welcomeSignup">Sign up</string>

  <string name="signupTitle">Sign up for the Donation App</string>
  <string name="signupSubtitle">Enter details below</string>
  <string name="signupFirstname">First name</string>
  <string name="signupLastName">Last Name</string>
  <string name="signupEmail">Email</string>
  <string name="signupPassword">Password</string>
  <string name="signupRegister">Register</string>

  <string name="title_activity_login">Login</string>
  <string name="loginTitle">Login to Donation</string>
  <string name="loginSubtitle">You must be registered</string>
  <string name="loginSignin">Sign in</string>
  <string name="loginEmail">Email</string>
  <string name="loginPassword">Password</string>

  <string name="menuLogout">Logout</string>

</resources>