<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".activity.Donate" >

  <TextView
      android:id="@+id/signupTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="28dp"
      android:text="@string/signupTitle"
      android:textAppearance="?android:attr/textAppearanceMedium" />

  <TextView
      android:id="@+id/signupSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/signupTitle"
      android:layout_below="@+id/signupTitle"
      android:layout_marginLeft="55dp"
      android:layout_marginTop="30dp"
      android:text="@string/signupSubtitle"
      android:textAppearance="?android:attr/textAppearanceSmall" />

  <EditText
      android:id="@+id/firstName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/signupSubtitle"
      android:layout_marginTop="40dp"
      android:ems="10"
      android:hint="@string/signupFirstname"
      android:inputType="textPersonName"/>

  <requestFocus />

  <EditText
      android:id="@+id/lastName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/firstName"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/firstName"
      android:ems="10"
      android:hint="@string/signupLastName"
      android:inputType="textPersonName" >

  </EditText>

  <EditText
      android:id="@+id/Email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/lastName"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/lastName"
      android:ems="10"
      android:hint="@string/signupEmail"
      android:inputType="textEmailAddress" />

  <EditText
      android:id="@+id/Password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/Email"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/Email"
      android:ems="10"
      android:hint="@string/signupPassword"
      android:inputType="textPassword" />

  <Button
      android:id="@+id/signup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="28dp"
      android:onClick="signupPressed"
      android:text="@string/signupRegister" />

</RelativeLayout>