<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".Login" >

  <TextView
      android:id="@+id/loginTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="18dp"
      android:text="@string/loginTitle"
      android:textAppearance="?android:attr/textAppearanceMedium" />

  <TextView
      android:id="@+id/loginSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/loginTitle"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/loginTitle"
      android:text="@string/loginSubtitle"
      android:textAppearance="?android:attr/textAppearanceSmall" />

  <EditText
      android:id="@+id/loginEmail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/loginSubtitle"
      android:layout_alignRight="@+id/loginSubtitle"
      android:layout_below="@+id/loginSubtitle"
      android:layout_marginTop="17dp"
      android:ems="10"
      android:hint="@string/loginEmail"
      android:inputType="textEmailAddress" >

    <requestFocus />
  </EditText>

  <EditText
      android:id="@+id/loginPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/loginEmail"
      android:layout_alignRight="@+id/loginEmail"
      android:layout_below="@+id/loginEmail"
      android:ems="10"
      android:hint="@string/loginPassword"
      android:inputType="textPassword" />

  <Button
      android:id="@+id/login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:onClick="signinPressed"
      android:text="@string/loginSignin" />

</RelativeLayout>